WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94956
[chromium] gestureTapDown should not select a RenderView node as target.
https://bugs.webkit.org/show_bug.cgi?id=94956
Summary
[chromium] gestureTapDown should not select a RenderView node as target.
W. James MacLean
Reported
2012-08-24 10:51:49 PDT
[chromium] gestureTapDown should not select a RenderView node as target.
Attachments
Patch
(14.87 KB, patch)
2012-08-24 10:53 PDT
,
W. James MacLean
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
W. James MacLean
Comment 1
2012-08-24 10:53:37 PDT
Created
attachment 160453
[details]
Patch Currently, if a gestureTapDown occurs outside any clickable node, and the document (RenderView) has click handlers installed, the entire RenderView gets highlighted, which is not desired. This patch prevents us from falling back to the RenderView as highlight target.
WebKit Review Bot
Comment 2
2012-08-24 11:58:50 PDT
Comment on
attachment 160453
[details]
Patch Clearing flags on attachment: 160453 Committed
r126608
: <
http://trac.webkit.org/changeset/126608
>
WebKit Review Bot
Comment 3
2012-08-24 11:58:53 PDT
All reviewed patches have been landed. Closing bug.
LFC
Comment 4
2012-08-29 23:52:11 PDT
How about the situation that some pages have a click listener installed on a very big container which could contain a lot of text and images? Will it show up the highlight on that container, too?
W. James MacLean
Comment 5
2012-08-30 05:55:33 PDT
(In reply to
comment #4
)
> How about the situation that some pages have a click listener installed on a very big container which could contain a lot of text and images? Will it show up the highlight on that container, too?
We are working (in a separate bug) to minimize this best we can, although if a web page designer has a click listener on a large div (for example), then we think we should highlight it as it is a valid touch target. There's is no way we can figure out whether the touch listener does anything meaningful, so we will at some point have to rely on site architects not sticking listeners on things and then doing nothing with them.
LFC
Comment 6
2012-08-30 06:44:56 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > How about the situation that some pages have a click listener installed on a very big container which could contain a lot of text and images? Will it show up the highlight on that container, too? > > We are working (in a separate bug) to minimize this best we can, although if a web page designer has a click listener on a large div (for example), then we think we should highlight it as it is a valid touch target. There's is no way we can figure out whether the touch listener does anything meaningful, so we will at some point have to rely on site architects not sticking listeners on things and then doing nothing with them.
I'm very interested in this topic, and also I have made some attempts to avoid highlighting on large area. I assume that in most cases containers with only pure texts or images inside (eg, no links, no other clickable nodes at all) can be chosen as highlight nodes. What's your suggestions? Or you may tell me which but you are working on?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug