[chromium] gestureTapDown should not select a RenderView node as target. https://bugs.webkit.org/show_bug.cgi?id=94956

Reviewed by James Robinson.

Add check to prevent selecting a RenderView node as a highlight target.

Source/WebKit/chromium:

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::bestTouchLinkNode):

LayoutTests:

* platform/chromium-linux/compositing/gestures/gesture-tapHighlight-simple-background.html: Added.
* platform/chromium-linux/platform/chromium-linux/compositing/gestures/gesture-tapHighlight-simple-background-expected.png: Added.
* platform/chromium-linux/platform/chromium-linux/compositing/gestures/gesture-tapHighlight-simple-background-expected.txt: Added.


Canonical link: https://commits.webkit.org/112821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126608 268f45cc-cd09-0410-ab3c-d52691b4dbfc